Arreglado bug de visualización (ver cambios)

--- a/paginasprueba/que.html
+++ b/paginasprueba/que.html
@@ -231,7 +231,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
     <p>Es un parte específico donde el alumno refleja por escrito y de una manera confidencial las reclamaciones y felicitaciones referentes a la docencia recibida. La Delegación estudia el parte y lo podrá transmitirlo a la dirección de departamento correspondiente. <a href="/servicios/representacion#pisado">Más información sobre PISADO</a></p>
   </div>
 
-  <div class="grid-3">
+  <div class="grid-3 omega">
     <dl class="statistics">
       <dt style="width:44%">&nbsp;</dt>
       <dd>44% Profesores</dd>
