--- a/paginasprueba/que.html
+++ b/paginasprueba/que.html
@@ -311,7 +311,10 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   <div class="grid-4 omega">
     <h3>Software</h3>
     
-  </div>
+  </div>  
+</div>
+
+<div class="clearfix">
   
 </div>
 
