Añadido "Más cosas que hace DelegacióN"

--- a/paginasprueba/que.html
+++ b/paginasprueba/que.html
@@ -315,7 +315,29 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 </div>
 
 <div class="clearfix">
-  
+  <h2>Más Delegación</h2>
+  <div class="grid-1 alpha">Publicación 255</div>
+  <div class="grid-1">Alquiler</div>
+  <div class="grid-1">Cursos</div>
+  <div class="grid-1">Orla</div>
+  <div class="grid-1">Concursos</div>
+  <div class="grid-1">Fietsam</div>
+  <div class="grid-1 omega">Guía del estudiante</div>
+</div>
+
+<div class="clearfix">
+  <h2>Mucho más...</h2>
+  <div style="color:#333">Apertura 24 horas de la escuela y el CDC</div>
+  <div style="color:#444">Gestión y mantenimiento del laboratorio de fotografía</div>
+  <div style="color:#555">Gestión y mantenimiento de las taquillas de la Escuela</div>
+  <div style="color:#666">Charlas y asambleas para que los alumnos estén mejor informados sobre los últimos acontecimientos</div>
+  <div style="color:#777">Comisiones donde se debate sobre el Plan de Estudios, PFC y Gestión de Espacios</div>
+  <div style="color:#888">Organización de la semana cultural</div>
+  <div style="color:#999">Creación de un foro de debate e intercambio en la web</div>
+  <div style="color:#AAA">Colaboración con las asociaciones para desarrollar actividades</div>
+  <div style="color:#BBB">Lorem ipsum dolor sit amet</div>
+  <div style="color:#CCC">Aenean commodo faucibus arcu ut ornare</div>
+  <div style="color:#DDD">Sed ut neque sit amet libero consectetur pellentesque ac et m</div>
 </div>
 
 
