--- a/paginasprueba/cursos.html
+++ b/paginasprueba/cursos.html
@@ -236,33 +236,76 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
 <div class="clearfix" style="background:#000; color:#999; margin:0 -10px; padding:10px;">
   <h2 style="margin:0; color:#999;">Convocatoria abierta</h2>
-  <div style="font-size:2em">Cursos de otoño 2012</div>
-  <p>Programas informáticos, idiomas y fotografía. Duración aproximada: 10 días.</p>
+  <div style="font-size:2em">Cursos intensivos enero 2013</div>
   <div class="clearfix">
     <div class="grid-1 alpha" style="margin-bottom:10px">
       <h3 style="color:#999; margin:0">Duración</h3>
-      <div class="big-text">30h</div>
-      <div>(3h/semana x 10 semanas)</div>
+      <div class="big-text">20h</div>
+      <div>(??h/día x ?días)</div>
     </div>
     <div class="grid-2">
       <h3 style="color:#999; margin:0">Fechas de cursos</h3>
-      <div class="big-text">01/OCT - 02/DIC</div>
-      <div>/2012</div>
+      <div class="big-text">21/ENE - 02/FEB</div>
+      <div>/2013</div>
     </div>
     <div class="grid-2" style="margin-bottom:10px; color:#000; background:#FFF">
       <h3 style="color:#000; margin:0">Inicio inscripciones</h3>
-      <div class="big-text">19/SEP</div>
-      <div>/2012</div>
+      <div class="big-text">14/ENE</div>
+      <div>/2013</div>
     </div>
     <div class="grid-2 omega">
+      <h3 style="color:#999; margin:0">Más info</h3>
+      <div class="big-text"><abbr title="Boletín de Estudiantes de Arquitectura">BEA</abbr>31</div>
     </div>
   </div>
 </div>
 
 <div class="clearfix">
-  <h2>Horarios y aulas de cursos otoño 2012</h2>
+  <h2>Información de cursos intensivos enero 2013</h2>
+  <div class="grid-1 alpha">
+    <h3 style="margin:0">Precio</h3>
+    <div class="big-text">45€</div>
+    <div>para estudiantes ETSAM</div>
+  </div>
+  <div class="grid-1">
+    <h3 style="margin:0">Precio</h3>
+    <div class="big-text">65€</div>
+    <div>para no estudiantes ETSAM</div>
+  </div>
+  <div class="grid-5 omega">
+    <h3 style="margin:0">Formas de pago</h3>
+    <ol style="list-style:lower-alpha">
+    <li>Con la tarjeta monedero de la UPM presentándose en la sede de Delegación</li>
+    <li>Ingreso (<strong>no se aceptan transferencias</strong>) en la cuenta bancaria BSCH...</li>
+    </ol>
+    <p>Se permite reservar plaza con validez de un día hábil</p>
+  </div>
+</div>
+<div class="clearfix">
+  <h2>Horario de cursos intensivos enero 2013</h2>
+  <div class="grid-1 alpha">
+    <h3>Autocad</h3>
+  </div>
+  <dl class="grid-4 omega">
+    <dt class="grid-1 alpha">Básico</dt>
+    <dd class="grid-1">Lunes</dd>
+    <dd class="grid-1">09:00-12:00</dd>
+    <dd class="grid-1 omega">aula XC1</dd>
+  </dl>
+  <div class="grid-1 alpha">&nbsp;</div>
+  <dl class="grid-4 omega">
+    <dt class="grid-1 alpha">Avanzado</dt>
+    <dd class="grid-1">Lunes</dd>
+    <dd class="grid-1">09:00-12:00</dd>
+    <dd class="grid-1 omega">aula XC1</dd>
+  </dl>
 </div>
 
+<div class="clearfix">
+  
+</div>
+  
+<h1>--- Finaliza aquí ---</h1>
 
 <h2>Programas informáticos</h2>
 <p>La delegación de alumnos oferta para alumnos de la escuela cursos formativos de materias que guardan relación con la carrera de arquitectura.
